fix(deps): rm jsdoc-to-markdown (vulnerable dep)
Signed-off-by: Derek Lewis <DerekNonGeneric@inf.is>

--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "prepare": "npm run compile-src && npm run compile-doc",
     "compile-src": "tsc --project ./",
-    "compile-doc": "jsdoc2md --template README.hbs --files lib/index.js > ./README.md",
+    "compile-doc": "",
     "test": "npx jasmine"
   },
   "repository": "openinf/util-object",
-  "keywords": ["JavaScript", "Object", "type", "utilities"],
+  "keywords": [
+    "JavaScript",
+    "Object",
+    "type",
+    "utilities"
+  ],
   "author": "The OpenINF Authors",
   "license": "MIT",
   "bugs": "https://github.com/openinf/util-object/issues",
@@ -34,7 +39,6 @@
     "eslint-plugin-unicorn": "44.0.2",
     "eslint-plugin-wix-editor": "3.3.0",
     "jasmine": "4.4.0",
-    "jsdoc-to-markdown": "7.1.1",
     "prettier": "2.7.1",
     "typescript": "4.8.4"
   },
